--- a/public/styles.css
+++ b/public/styles.css
@@ -1,10 +1,38 @@
 body {
-  background-color: #ffe5b2;
+  background: rgb(227,212,132)
 }
 
 h1 {
   color: red;
   font-family: sans-serif;
+  font-size: 40px;
+}
+
+#name{
+  font-size:x-large;
+  padding-top: 10px;
+  margin-bottom: 20px;
+
+}
+
+input[type=submit] {
+  font-size: medium;
+  padding:5px 15px; 
+  background:white; 
+  border:2 none;
+  cursor:pointer;
+  -webkit-border-radius: 5px;
+  border-radius: 5px; 
+}
+
+#get-random-fossil{
+  font-size: medium;
+  padding:5px 15px; 
+  background:white; 
+  border:2 none;
+  cursor:pointer;
+  -webkit-border-radius: 5px;
+  border-radius: 5px; 
 }
 
 img {
