--- a/views/homepage.html.njk
+++ b/views/homepage.html.njk
@@ -1,20 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Most Liked Fossils</title>
-  </head>
-  <body>
+{% extends 'base.html.njk' %}
+{%block title%} Most Liked Fossils {%endblock title%}
+{%block body%}
+
     <h1>Most Liked Fossils</h1>
 
     <form action="/get-name">
-      <div>
+      <div id="name">
         <label for="namefield">What's your name?</label>
         <input id="namefield" type="text" name="name" required />
       </div>
-      <div>
+      <div id = "nameBtn">
         <input type="submit" />
       </div>
     </form>
@@ -25,5 +20,5 @@
     <p id="random-fossil-name"></p>
 
     <script type="module" src="../src/random-fossil.js"></script>
-  </body>
-</html>
+
+{% endblock body %}
