--- a/views/thank-you.html.njk
+++ b/views/thank-you.html.njk
@@ -1,1 +1,10 @@
-<!-- This has been left intentionally empty -->
+{% extends 'base.html.njk' %}
+
+{% block body %}
+
+<h1>Thank you {{name}} </h1>
+
+<a href="/top-fossils/"> Top-Fossils </a>
+
+{% endblock %}
+
