--- a/views/top-fossils.html.njk
+++ b/views/top-fossils.html.njk
@@ -1,16 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Most Liked Fossils</title>
-  </head>
-  <body>
+{% extends 'base.html.njk' %}
+
+{% block title%} Most Liked Fossils {% endblock title%}
+
+{%block body%}
+    <h1> Welcome {{name}}</h1>
+
     <div class="fossil-div">
       <h3>{{ fossils[0].name }}</h3>
       <h2>Liked {{ fossils[0].num_likes }} times.</h2>
       <img src="{{ fossils[0].img }}" />
     </div>
-  </body>
-</html>
+
+  <table class="most-liked-fossil">
+  <thead>
+    <tr>
+      <th></th>
+      <th>Fossil Name</th>
+      <th>Likes</th>
+    </tr>
+  </thead>
+  <tbody>
+  {%for fossil in arrFossil%}
+    <tr>
+      <td>{{image}}</td>
+      <td>{{fossil.name}}</td>
+      <td>{{fossil.likes}}</td>
+    </tr>
+    {% endfor %}
+</tbody>
+</table>
+
+{% endblock %}
