random fossil image appearing now

--- a/views/top-fossils.html.njk
+++ b/views/top-fossils.html.njk
@@ -11,6 +11,22 @@
       <img src="{{ fossils[0].img }}" />
     </div>
 
+    <form>
+    <div class = "fossil-form-group">
+       <label>Choose a fossil</label>
+        <select name="fossil">
+          <option>Australopithecus, Aust</option>
+          <option>Quetzal, Quetz</option>
+          <option>Stegosaurus, Steg</option>
+          <option>Tyrannosaurus, Tyra</option>
+        </select>
+    </div>
+
+      <div class = "form-group">
+        <button id= "fossil-submit-btn" type= "submit">Submit</button>
+      </div>
+    </form>
+
   <table class="most-liked-fossil">
   <thead>
     <tr>
