--- a/views/top-fossils.html.njk
+++ b/views/top-fossils.html.njk
@@ -3,7 +3,9 @@
 {% block title%} Most Liked Fossils {% endblock title%}
 
 {%block body%}
-    <h1> Welcome {{name}}</h1>
+{%for user in newArr%}
+    <h1> Welcome {{user}} </h1>
+{% endfor %}
 
     <div class="fossil-div">
       <h3>{{ fossils[0].name }}</h3>
@@ -11,19 +13,19 @@
       <img src="{{ fossils[0].img }}" />
     </div>
 
-    <form>
+  <form class="form-vote" action= "/like-fossil" method = "POST">
     <div class = "fossil-form-group">
        <label>Choose a fossil</label>
         <select name="fossil">
-          <option>Australopithecus, Aust</option>
-          <option>Quetzal, Quetz</option>
-          <option>Stegosaurus, Steg</option>
-          <option>Tyrannosaurus, Tyra</option>
+          <option>Aust</option>
+          <option>Quetz</option>
+          <option>Steg</option>
+          <option>Tyra</option>
         </select>
     </div>
 
       <div class = "form-group">
-        <button id= "fossil-submit-btn" type= "submit">Submit</button>
+        <button id= "fossil-submit-btn" type="submit">Submit</button>
       </div>
     </form>
 
