--- a/views/base.html.njk
+++ b/views/base.html.njk
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,5 +7,9 @@
   </head>
   <body>
     {% block body %}{% endblock %}
+
+  <div>
+    <a class="nav-link" href="/logout">Log Out</a>
+  </div>
   </body>
 </html>
