--- a/public/styles.css
+++ b/public/styles.css
@@ -2,16 +2,26 @@ body {
   background: rgb(227,212,132)
 }
 
+table,
+section,
+form {
+  display: flex;
+
+  align-items: center;
+}
+
 h1 {
   color: red;
   font-family: sans-serif;
   font-size: 40px;
+
 }
 
 #name{
   font-size:x-large;
   padding-top: 10px;
   margin-bottom: 20px;
+
 
 }
 
@@ -32,7 +42,8 @@ input[type=submit] {
   border:2 none;
   cursor:pointer;
   -webkit-border-radius: 5px;
-  border-radius: 5px; 
+  border-radius: 5px;
+
 }
 
 img {
@@ -43,6 +54,7 @@ img {
 img.centered {
   display: block;
   margin: 0 auto;
+
 }
 
 .fossil-div {
@@ -51,7 +63,7 @@ img.centered {
   width: 205px;
 }
 
-.fossil-div img {
+.fossil-div {
   border: 2px solid green;
 }
 
@@ -61,4 +73,8 @@ img.centered {
 
 .nav-link{
   padding: 10px;;
+}
+
+.btn btn-primary{
+  padding: 5px;
 }
