top-fossils html dropdown menu no longer hardcoded

--- a/views/thank-you.html.njk
+++ b/views/thank-you.html.njk
@@ -4,7 +4,19 @@
 
 <h1>Thank you {{name}} </h1>
 
-<a href="/top-fossils/"> Top-Fossils </a>
+<img id = "dino-gif" src=
+"https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExbWx2eXc2bmp5Y3VhYnhrYjRpb2NuNjV2ZjAwc2owNjNnODZhcmY1eiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/ISEldglYRTodgB3xly/giphy.gif"
+alt="this is dino"  width="250"
+/>
+
+<div id = "nav-link">
+ <a class="nav-link" href="/top-fossils/">Top Fossils</a>
+</div>
+
+<div id = "nav-link">
+ <a class="nav-link" href="/logout">Log Out</a>
+</div>
+
 
 {% endblock %}
 
