--- a/public/styles.css
+++ b/public/styles.css
@@ -43,8 +43,8 @@ input[type=submit] {
   cursor:pointer;
   -webkit-border-radius: 5px;
   border-radius: 5px;
-
 }
+
 
 img {
   height: 200px;
@@ -60,21 +60,47 @@ img.centered {
 .fossil-div {
   display: inline-block;
   padding: 10px;
-  width: 205px;
-}
-
-.fossil-div {
+  height: 400px;
+  width: 300px;
   border: 2px solid green;
 }
+
+#fossil-form{
+  font-size:x-large;
+  padding: 5px 10px;
+  height: 100px;
+  box-sizing: border-box;
+
+}
+
+.sel{
+  width: 200px;
+  height: 40px;
+  font-size: x-large;
+  margin-bottom: 10px;
+  margin-right: 10px;
+}
+
 
 #fossil-rank{
   border:2px;
 }
 
-.nav-link{
-  padding: 10px;;
+#nav-link{
+  font-size:x-large;
+  padding:5px 15px; 
+  border:5px none;
+  cursor:pointer;
+  -webkit-border-radius: 5px;
+  border-radius: 5px; 
+  margin: 10px;
 }
 
 .btn btn-primary{
   padding: 5px;
+}
+
+#dino-gif {
+  height: 600px;
+  width: 600px;
 }
