--- a/views/homepage.html.njk
+++ b/views/homepage.html.njk
@@ -8,7 +8,7 @@
 
        <div id="name">
         <label for="namefield">What's your name?</label>
-        <input type="text" name= "name" required />
+        <input class = "sel" type="text" name= "name" required />
       </div>
 
       <div>
