--- a/views/homepage.html.njk
+++ b/views/homepage.html.njk
@@ -11,7 +11,7 @@
         <input class = "sel" type="text" name= "name" required />
       </div>
 
-      <div>
+      <div id="submit">
       <input type="submit" />
       </div>
       </form>
