--- a/views/homepage.html.njk
+++ b/views/homepage.html.njk
@@ -19,7 +19,7 @@
     <h1>Random Fossil</h1>
     <button id="get-random-fossil">Get Random Fossil</button>
     <div id="random-fossil-image"></div>
-    <p id="random-fossil-name"></p>
+    <p id="random-fossil-name">{{name}}</p>
 
     <script type="module" src="../src/random-fossil.js"></script>
 
